--- a/pom.xml
+++ b/pom.xml
@@ -23,16 +23,19 @@
         <java.version>1.8</java.version>
     </properties>
 
-    <dependencies>
-
-    </dependencies>
-
     <build>
         <pluginManagement>
             <plugins>
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <configuration>
+                        <goals>install</goals>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
